addPostPhotoUrl
